--- a/companylibrary/src/main/res/layout/toolbar.xml
+++ b/companylibrary/src/main/res/layout/toolbar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/color_of_ffffff"
@@ -17,7 +18,7 @@
                 android:scaleType="fitCenter"
                 android:layout_gravity="center"
                 android:id="@+id/toolbar_src_left"
-                android:src="@drawable/icon_back_36"
+                app:srcCompat="@drawable/ic_back_3d3d3d"
                 android:background="@color/color_of_tran"
                 android:layout_width="17dp"
                 android:layout_height="17dp" />
@@ -29,7 +30,7 @@
             android:textStyle="bold"
             android:gravity="center"
             android:singleLine="true"
-            android:textSize="@dimen/text_of_16"
+            android:textSize="16dp"
             android:textColor="@color/color_of_333333"
             android:layout_centerInParent="true"
             android:layout_width="wrap_content"
