--- a/app/src/main/res/layout/fragment_home_type.xml
+++ b/app/src/main/res/layout/fragment_home_type.xml
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content"/>
 
         <LinearLayout
+            android:id="@+id/ll_more"
             android:paddingLeft="15dp"
             android:layout_gravity="bottom"
             android:gravity="center_vertical"
