--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -6,8 +6,8 @@
         <item>待支付</item>
         <item>待派车</item>
         <item>找车中</item>
-        <item>待发车（未买保险）</item>
-        <item>待发车（已买保险）</item>
+        <item>待发车(未买保险)</item>
+        <item>待发车(已买保险)</item>
         <item>运输中</item>
         <item>已到达</item>
         <item>已收货</item>
@@ -20,8 +20,8 @@
         <item>差额支付中</item>
         <item>待派车</item>
         <item>找车中</item>
-        <item>待发车（未买保险）</item>
-        <item>待发车（已买保险）</item>
+        <item>待发车(未买保险)</item>
+        <item>待发车(已买保险)</item>
         <item>运输中</item>
         <item>已到达</item>
         <item>已收货</item>
@@ -31,8 +31,8 @@
         <item>待支付</item>
         <item>待派车</item>
         <item>找车中</item>
-        <item>待发车（未买保险）</item>
-        <item>待发车（已买保险）</item>
+        <item>待发车(未买保险)</item>
+        <item>待发车(已买保险)</item>
         <item>运输中</item>
         <item>已到达</item>
         <item>已收货</item>
@@ -41,7 +41,6 @@
         <item>托运人</item>
         <item>承运人</item>
         <item>司机</item>
-
     </string-array>
 
 
