--- a/companylibrary/src/main/res/values/colors.xml
+++ b/companylibrary/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="color_of_f9c57c">#F9C57C</color>
     <color name="color_of_1c234d">#1C234D</color>
     <color name="color_of_a1a1a1">#A1A1A1</color>
+    <color name="color_of_aaabaf">#AAABAF</color>
     <color name="color_of_3d3d3d">#3d3d3d</color>
     <color name="color_of_d9d9d9">#d9d9d9</color>
     <color name="color_of_be8c46">#BE8C46</color>
