--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -137,7 +137,7 @@
                         android:layout_marginLeft="15dp"
                         android:text="******"
                         android:textColor="@color/color_of_040000"
-                        android:textSize="16dp"
+                        android:textSize="24dp"
                         android:textStyle="bold"
                         app:layout_constraintEnd_toStartOf="@id/icon_eyes"
                         app:layout_constraintStart_toEndOf="@id/view_line"
@@ -145,12 +145,16 @@
 
                     <ImageView
                         android:id="@+id/icon_eyes"
-                        android:layout_width="17dp"
-                        android:layout_height="17dp"
-                        android:src="@mipmap/ic_launcher"
+                        android:layout_width="37dp"
+                        android:layout_height="57dp"
+                        android:paddingLeft="20dp"
+                        android:paddingTop="20dp"
+                        android:paddingBottom="20dp"
+                        android:src="@mipmap/attention_forbid"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </com.fy.androidlibrary.widget.shadow.ShadowLayout>
@@ -272,12 +276,13 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/content" />
+
             <View
                 android:id="@+id/bt_learn_more"
                 android:layout_width="150dp"
-                app:layout_constraintStart_toStartOf="@id/img_more"
+                android:layout_height="100dp"
                 app:layout_constraintBottom_toBottomOf="@id/img_more"
-                android:layout_height="100dp"/>
+                app:layout_constraintStart_toStartOf="@id/img_more" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
