--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -12,10 +12,13 @@
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+
+        android:layout_weight="1">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
+            android:layout_marginBottom="10dp"
             android:layout_height="500dp">
 
             <androidx.constraintlayout.widget.Guideline
@@ -109,11 +112,36 @@
                 app:layout_constraintTop_toTopOf="@id/view_flag_address" />
 
             <TextView
+                android:id="@+id/tv__end_flag"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:background="@drawable/ovl_5_e50000"
+                android:gravity="center"
+                android:text="收"
+                android:textColor="@color/color_of_ffffff"
+                app:layout_constraintStart_toStartOf="@id/tv_start_flag"
+                app:layout_constraintEnd_toEndOf="@id/tv_start_flag"
+                app:layout_constraintTop_toTopOf="@id/tv_end" />
+
+            <com.fy.androidlibrary.widget.DashedView
+                android:layout_width="2dp"
+                app:layout_constraintTop_toBottomOf="@id/tv_start_flag"
+                app:layout_constraintBottom_toTopOf="@id/tv__end_flag"
+                app:layout_constraintStart_toStartOf="@id/tv_start_flag"
+                app:layout_constraintEnd_toEndOf="@id/tv_start_flag"
+                app:dashedColor="@color/color_of_eeeeee"
+                app:dashedOritation="vertical"
+                app:dashedWidth="2dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_height="0dp"/>
+
+            <TextView
                 android:id="@+id/tv_start"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginEnd="15dp"
+                android:layout_marginLeft="@dimen/gap_app"
+                android:layout_marginRight="@dimen/gap_app"
                 android:textColor="@color/color_of_040000"
                 android:textSize="17dp"
                 app:layout_constraintEnd_toEndOf="@id/view_flag_address"
@@ -194,15 +222,14 @@
             </RelativeLayout>
 
 
-
             <TextView
                 android:id="@+id/tv_driver_contact"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/ovl_5_ffffff"
-                android:padding="15dp"
                 android:lineSpacingMultiplier="1.5"
+                android:padding="15dp"
                 app:layout_constraintEnd_toEndOf="@id/guide_right"
                 app:layout_constraintStart_toStartOf="@id/guide_left"
                 app:layout_constraintTop_toBottomOf="@id/view_flag_address" />
@@ -213,8 +240,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/ovl_5_ffffff"
-                android:padding="15dp"
                 android:lineSpacingMultiplier="1.5"
+                android:padding="15dp"
 
                 app:layout_constraintEnd_toEndOf="@id/guide_right"
                 app:layout_constraintStart_toStartOf="@id/guide_left"
@@ -226,8 +253,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/ovl_5_ffffff"
-                android:padding="15dp"
                 android:lineSpacingMultiplier="1.5"
+                android:padding="15dp"
                 app:layout_constraintEnd_toEndOf="@id/guide_right"
                 app:layout_constraintStart_toStartOf="@id/guide_left"
                 app:layout_constraintTop_toBottomOf="@id/tv_detail" />
@@ -236,5 +263,50 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/color_of_ffffff"
+        android:divider="@drawable/ovl_5_ffffff"
+        android:orientation="horizontal"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:showDividers="middle">
+
+        <TextView
+            android:id="@+id/bt_left"
+            android:layout_width="0dp"
+            app:layout_constraintEnd_toStartOf="@id/bt_right"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/ovl_5_eeeeee"
+            android:gravity="center"
+            android:padding="12dp"
+            android:text="取消钉钉"
+            android:textStyle="bold"
+            android:layout_marginEnd="10dp"
+            app:layout_goneMarginEnd="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/bt_right"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ovl_5_e50000"
+            android:gravity="center"
+            android:padding="12dp"
+            android:text="继续付款"
+            android:textColor="@color/color_of_ffffff"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@id/bt_left"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
