--- a/companylibrary/src/main/res/values/colors.xml
+++ b/companylibrary/src/main/res/values/colors.xml
@@ -21,7 +21,9 @@
     <color name="color_of_ebedfa">#ebedfa</color>
     <color name="color_of_f5f5f5">#f5f5f5</color>
     <color name="color_of_f5f6fc">#f5f6fc</color>
+    <color name="color_of_f6f5f8">#f6f5f8</color>
     <color name="color_of_878787">#878787</color>
+    <color name="color_of_fa8c16">#FA8C16</color>
     <color name="color_of_661c234d">#661C234D</color>
     <color name="color_of_c7c7c7">#C7C7C7</color>
     <color name="color_of_001100">#001100</color>
