--- a/app/src/main/res/layout/activity_my_order.xml
+++ b/app/src/main/res/layout/activity_my_order.xml
@@ -47,7 +47,7 @@
                 android:layout_height="wrap_content"/>
 
             <ImageView
-                android:src="@mipmap/filtrate"
+                app:srcCompat="@drawable/filtrate_ffffff"
                 android:layout_width="8dp"
                 android:layout_marginLeft="3.5dp"
                 android:layout_height="8dp"/>
