--- a/companylibrary/src/main/res/values/colors.xml
+++ b/companylibrary/src/main/res/values/colors.xml
@@ -61,5 +61,6 @@
     <color name="color_of_3d5688">#3D5688</color>
     <color name="color_of_1890ff">#1890FF</color>
     <color name="color_of_e50000">#E50000</color>
+    <color name="color_of_dddddd">#dddddd</color>
 
 </resources>
