--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,4 +32,14 @@
 
 
     </style>
+
+    <style name="bt_red">
+        <item name="android:textColor">@color/color_of_ffffff</item>
+        <item name="android:background">@drawable/ovl_5_e50000</item>
+        <item name="android:textSize">18dp</item>
+        <item name="android:layout_margin">10dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:gravity">center</item>
+    </style>
 </resources>
