--- a/app/src/main/res/layout/item_search_car.xml
+++ b/app/src/main/res/layout/item_search_car.xml
@@ -30,54 +30,44 @@
             android:paddingRight="15dp"
             android:paddingBottom="13dp">
 
-            <TextView
-                android:id="@+id/tv_count"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/color_of_040000"
-                android:textSize="13dp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="-2000" />
+
 
             <TextView
-                android:id="@+id/tv_statute"
+                android:id="@+id/tv_car_info"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/gap_app"
                 android:textColor="@color/color_of_040000"
                 android:textSize="15dp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@id/tv_count"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:text="入账" />
+                tools:text="鄂翠信 - 浙A27388" />
 
             <TextView
-                android:id="@+id/tv_des"
+                android:id="@+id/tv_phone"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:textColor="@color/color_of_999999"
                 android:textSize="13dp"
-                app:layout_constraintEnd_toEndOf="@id/tv_statute"
-                app:layout_constraintStart_toStartOf="@id/tv_statute"
-                app:layout_constraintTop_toBottomOf="@id/tv_statute"
-                tools:text="中国工商银行 6222" />
+                app:layout_constraintEnd_toEndOf="@id/tv_car_info"
+                app:layout_constraintStart_toStartOf="@id/tv_car_info"
+                app:layout_constraintTop_toBottomOf="@id/tv_car_info"
+                tools:text="15515515155" />
 
             <TextView
-                android:id="@+id/tv_time"
+                android:id="@+id/tv_car_type"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:textColor="@color/color_of_999999"
                 android:textSize="13dp"
-                app:layout_constraintEnd_toEndOf="@id/tv_statute"
-                app:layout_constraintStart_toStartOf="@id/tv_statute"
-                app:layout_constraintTop_toBottomOf="@id/tv_des"
-                tools:text="中国工商银行 6222" />
+                app:layout_constraintEnd_toEndOf="@id/tv_car_info"
+                app:layout_constraintStart_toStartOf="@id/tv_car_info"
+                app:layout_constraintTop_toBottomOf="@id/tv_phone"
+                tools:text="五菱荣光新卡（轻型卡车）" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
