--- a/app/src/main/res/layout/activity_assign_order.xml
+++ b/app/src/main/res/layout/activity_assign_order.xml
@@ -21,72 +21,28 @@
 
     <com.fy.companylibrary.widget.ItemTextView
         android:id="@+id/item_price"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/gap_app"
         android:layout_marginTop="50dp"
-        android:layout_marginRight="@dimen/gap_app"
-        android:minHeight="55dp"
+        style="@style/item_edit"
         app:centerType="number"
-        app:colorCenterHide="@color/color_of_cccccc"
-        app:colorLeft="@color/color_of_666666"
-        app:editable="true"
-        app:showline="true"
-        app:sizecenter="15dp"
-        app:sizeleft="15dp"
         app:textcenterhide="请输入支付承运人的实际运费"
         app:textleft="实际运费(元）" />
 
     <com.fy.companylibrary.widget.ItemTextView
         android:id="@+id/item_car_type"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/gap_app"
-        android:layout_marginRight="@dimen/gap_app"
-        android:minHeight="55dp"
-        app:colorCenterHide="@color/color_of_cccccc"
-        app:colorLeft="@color/color_of_666666"
-        app:editable="false"
-        app:isSingleLine="false"
-        app:showline="true"
-        app:sizecenter="15dp"
-        app:sizeleft="15dp"
-        app:srcRight="@drawable/icon_go_999999"
-        app:srcshow="true"
+        style="@style/item_text"
         app:textcenterhide="请选择车辆类型"
         app:textleft="车辆类型" />
 
     <com.fy.companylibrary.widget.ItemTextView
         android:id="@+id/item_driver_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/gap_app"
-        android:layout_marginRight="@dimen/gap_app"
-        android:minHeight="55dp"
-        app:centerType="number"
-        app:colorCenterHide="@color/color_of_cccccc"
-        app:colorLeft="@color/color_of_666666"
-        app:editable="true"
-        app:showline="true"
-        app:sizecenter="15dp"
-        app:sizeleft="15dp"
+        style="@style/item_edit"
         app:textcenterhide="请输入司机姓名"
         app:textleft="司机姓名" />
 
     <com.fy.companylibrary.widget.ItemTextView
         android:id="@+id/item_driver_phone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/gap_app"
-        android:layout_marginRight="@dimen/gap_app"
-        android:minHeight="55dp"
+        style="@style/item_edit"
         app:centerType="phone"
-        app:colorCenterHide="@color/color_of_cccccc"
-        app:colorLeft="@color/color_of_666666"
-        app:editable="true"
-        app:showline="true"
-        app:sizecenter="15dp"
-        app:sizeleft="15dp"
         app:textcenterhide="请输入司机电话"
         app:textleft="司机电话" />
 
