--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,4 +42,29 @@
         <item name="android:layout_height">50dp</item>
         <item name="android:gravity">center</item>
     </style>
+
+
+    <style name="item_edit">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:background">@color/color_of_ffffff</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">@dimen/gap_app</item>
+        <item name="android:layout_marginRight">@dimen/gap_app</item>
+        <item name="android:minHeight">55dp</item>
+        <item name="centerType">normal</item>
+        <item name="colorCenterHide">@color/color_of_cccccc</item>
+        <item name="android:centerColor">@color/color_of_040000</item>
+        <item name="colorLeft">@color/color_of_666666</item>
+        <item name="showline">true</item>
+        <item name="sizecenter">15dp</item>
+        <item name="sizeleft">15dp</item>
+        <item name="editable">true</item>
+        <item name="isSingleLine">false</item>
+    </style>
+    <style name="item_text" parent="item_edit">
+        <item name="editable">false</item>
+        <item name="srcRight">@drawable/icon_go_999999</item>
+        <item name="srcshow">true</item>
+    </style>
+
 </resources>
