--- a/app/src/main/res/layout/activity_order_create.xml
+++ b/app/src/main/res/layout/activity_order_create.xml
@@ -42,7 +42,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/tv__end_flag"
+                    android:id="@+id/tv_end_flag"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:background="@drawable/ovl_5_e50000"
@@ -61,7 +61,7 @@
                     app:dashedColor="@color/color_of_eeeeee"
                     app:dashedOritation="vertical"
                     app:dashedWidth="2dp"
-                    app:layout_constraintBottom_toTopOf="@id/tv__end_flag"
+                    app:layout_constraintBottom_toTopOf="@id/tv_end_flag"
                     app:layout_constraintEnd_toEndOf="@id/tv_start_flag"
                     app:layout_constraintStart_toStartOf="@id/tv_start_flag"
                     app:layout_constraintTop_toBottomOf="@id/tv_start_flag" />
@@ -154,7 +154,7 @@
                     app:layout_constraintTop_toBottomOf="@id/tv_end" />
 
 
-                <androidx.constraintlayout.widget.Group
+                <View
                     android:id="@+id/group_start"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
