--- a/app/src/main/res/layout/activity_my_car_list.xml
+++ b/app/src/main/res/layout/activity_my_car_list.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/color_of_ffffff"
     android:orientation="vertical"
-    tools:context=".ui.MyCarListActivity">
+    tools:context=".ui.CarListActivity">
 
     <include layout="@layout/toolbar"/>
     <include layout="@layout/layout_refresh"/>
