--- a/app/src/main/res/layout/item_car_foot.xml
+++ b/app/src/main/res/layout/item_car_foot.xml
@@ -11,7 +11,7 @@
 
     <ImageView
         android:layout_width="20dp"
-        android:src="@mipmap/ic_launcher"
+        android:src="@mipmap/icon_add_skfs_28"
         android:layout_height="20dp"/>
     <TextView
         android:layout_width="wrap_content"
