--- a/app/src/main/res/layout/fragment_attestation_carrier_personal.xml
+++ b/app/src/main/res/layout/fragment_attestation_carrier_personal.xml
@@ -7,34 +7,135 @@
     android:background="@color/color_of_ffffff"
     android:orientation="vertical"
     >
-    <com.fy.companylibrary.widget.ItemTextView
-        style="@style/item_edit"
-        android:id="@+id/item_name"
-        app:textcenterhide="请输入姓名"
-        app:textleft="姓名" />
 
-    <com.fy.companylibrary.widget.ItemTextView
-        style="@style/item_edit"
-        app:centerType="idcard"
-        android:id="@+id/item_id_card"
-
-        app:textcenterhide="请输入身份证号码"
-        app:textleft="身份证号码" />
-
-    <com.fy.companylibrary.widget.ItemTextView
-        style="@style/item_edit"
-        android:id="@+id/item_email"
-        app:centerType="normal"
-        app:textcenterhide="请输入邮箱"
-        app:textleft="邮箱" />
-
-    <View
-        android:layout_width="wrap_content"
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
         android:layout_weight="1"
-        android:layout_height="0dp"/>
+        android:layout_height="0dp">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <com.fy.companylibrary.widget.ItemTextView
+                style="@style/item_edit"
+                android:id="@+id/item_name"
+                app:textcenterhide="请输入姓名"
+                app:textleft="姓名" />
+
+            <com.fy.companylibrary.widget.ItemTextView
+                style="@style/item_edit"
+                app:centerType="idcard"
+                android:id="@+id/item_id_card"
+                app:textcenterhide="请输入身份证号码"
+                app:textleft="身份证号码" />
+
+            <com.fy.companylibrary.widget.ItemTextView
+                style="@style/item_edit"
+                android:id="@+id/item_email"
+                app:centerType="normal"
+                app:textcenterhide="请输入邮箱"
+                app:textleft="邮箱" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/gap_app"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="10dp"
+                android:text="道路运输许可证"
+                android:textColor="@color/color_of_666666"
+                android:textSize="14dp" />
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="160dp"
+                android:layout_marginLeft="@dimen/gap_app"
+                android:layout_marginRight="@dimen/gap_app">
+
+                <com.fy.androidlibrary.widget.CircularImageView
+                    android:id="@+id/img_driver"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/ovl_5_f6f5f8"
+                    app:viewradius="5dp" />
+
+                <LinearLayout
+                    android:id="@+id/ll_driver"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:src="@mipmap/camera" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="7dp"
+                        android:text="上传道路运输许可证"
+                        android:textColor="@color/color_of_cccccc"
+                        android:textSize="14dp" />
+                </LinearLayout>
+
+            </FrameLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/gap_app"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="10dp"
+                android:text="挂靠协议"
+                android:textColor="@color/color_of_666666"
+                android:textSize="14dp" />
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="160dp"
+                android:layout_marginLeft="@dimen/gap_app"
+                android:layout_marginRight="@dimen/gap_app">
+
+                <com.fy.androidlibrary.widget.CircularImageView
+                    android:id="@+id/img_qualification"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/ovl_5_f6f5f8"
+                    app:viewradius="5dp" />
+
+                <LinearLayout
+                    android:id="@+id/ll_qualification"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:src="@mipmap/camera" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="7dp"
+                        android:text="上传挂靠协议"
+                        android:textColor="@color/color_of_cccccc"
+                        android:textSize="14dp" />
+                </LinearLayout>
+
+            </FrameLayout>
+        </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
     <TextView
         android:text="下一步"
         android:id="@+id/bt_sum"
         style="@style/bt_red"/>
-
 </LinearLayout>
