--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -48,8 +48,8 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:background">@color/color_of_ffffff</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginLeft">@dimen/gap_app</item>
-        <item name="android:layout_marginRight">@dimen/gap_app</item>
+        <item name="android:paddingLeft">@dimen/gap_app</item>
+        <item name="android:paddingRight">@dimen/gap_app</item>
         <item name="android:minHeight">55dp</item>
         <item name="centerType">normal</item>
         <item name="colorCenterHide">@color/color_of_cccccc</item>
