--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,8 +3,6 @@
 
     <!--承运人状态-->
     <string-array name="carrier_status">
-        <item>待支付</item>
-        <item>待派车</item>
         <item>找车中</item>
         <item>待发车</item>
         <item>运输中</item>
@@ -26,6 +24,13 @@
     </string-array>
     <!--司机状态-->
     <string-array name="driver_status">
+        <item>待发车</item>
+        <item>运输中</item>
+        <item>已到达</item>
+        <item>已收货</item>
+    </string-array>
+      <!--平台-->
+    <string-array name="platform_status">
         <item>待支付</item>
         <item>待派车</item>
         <item>找车中</item>
@@ -34,6 +39,8 @@
         <item>已到达</item>
         <item>已收货</item>
     </string-array>
+
+
     <string-array name="roles">
         <item>托运人</item>
         <item>承运人</item>
