--- a/app/src/main/res/layout/activity_assign_order.xml
+++ b/app/src/main/res/layout/activity_assign_order.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/color_of_ffffff"
     android:orientation="vertical"
-    tools:context=".ui.FindCarActivity">
+    tools:context=".ui.AssignOrderActivity">
 
     <include layout="@layout/toolbar" />
 
