订单已支付完成

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -48,4 +48,9 @@
     </string-array>
 
 
+    <!--被保险人身份-->
+    <string-array name="insured_type">
+        <item>个人</item>
+        <item>企业</item>
+    </string-array>
 </resources>
