--- a/companylibrary/src/main/res/values/colors.xml
+++ b/companylibrary/src/main/res/values/colors.xml
@@ -46,6 +46,7 @@
     <color name="color_of_14_ffffff">#33ffffff</color>//不透明度20%
     <color name="color_of_4d_ffffff">#4Dffffff</color>//不透明度30%
     <color name="color_of_ffe6e6">#FFE6E6</color>
+    <color name="color_of_ff3a30">#FF3A30</color>
     <color name="color_of_ffefd9">#FFEFD9</color>
     <color name="color_of_393939">#393939</color>
     <color name="color_of_3d59ae">#3d59ae</color>
