--- a/companylibrary/src/main/res/values/colors.xml
+++ b/companylibrary/src/main/res/values/colors.xml
@@ -63,5 +63,7 @@
     <color name="color_of_1890ff">#1890FF</color>
     <color name="color_of_e50000">#E50000</color>
     <color name="color_of_dddddd">#dddddd</color>
+    <color name="color_tabe_unselect">#A2A2A2</color>
+    <color name="color_tabe_select">#E83E15</color>
 
 </resources>
