--- a/app/src/main/res/layout/dialog_insurance_buy.xml
+++ b/app/src/main/res/layout/dialog_insurance_buy.xml
@@ -1,46 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_of_ffffff"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/gap_app"
-    android:paddingTop="@dimen/gap_app">
+    android:paddingTop="@dimen/gap_app"
+    android:paddingBottom="@dimen/gap_app">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <TextView
-            android:layout_marginLeft="15dp"
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
-            android:textColor="@color/color_of_040000"
-            android:text="选择收款方式"
-            android:textStyle="bold"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
             android:layout_weight="1"
+            android:text="选择收款方式"
+            android:textColor="@color/color_of_040000"
             android:textSize="19sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_height="wrap_content" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:paddingRight="15dp"
             android:id="@+id/img_cancel"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/tv_title"
-            app:layout_constraintBottom_toBottomOf="@id/tv_title"
             android:layout_width="45dp"
+            android:layout_height="30dp"
+            android:paddingRight="15dp"
             android:src="@mipmap/close"
-            android:layout_height="30dp" />
+            app:layout_constraintBottom_toBottomOf="@id/tv_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/tv_title" />
     </LinearLayout>
 
 
     <View
         android:layout_width="match_parent"
-        android:background="@color/line_color"
+        android:layout_height="@dimen/line_height"
         android:layout_margin="@dimen/gap_app"
-        android:layout_height="@dimen/line_height"/>
+        android:background="@color/line_color" />
 
     <com.fy.companylibrary.widget.ItemTextView
         android:id="@+id/item_cargo_price"
@@ -84,7 +85,15 @@
             android:textColor="@color/color_of_3d5688"
             android:textSize="12dp" />
     </LinearLayout>
-    
 
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
+
+    <TextView
+        android:id="@+id/bt_sum"
+        android:text="确定购买"
+        style="@style/bt_red" />
 
 </LinearLayout>
